emphasize search box (base template)

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -25,11 +25,11 @@
     <a href="/about" class="item">About</a>
     <a href="https://guide.{{ config.FATCAT_DOMAIN }}/" class="item">Guide</a>
     <div class="right menu">
-      <div class="item">
+      <div class="item" style="padding: 0;">
         <form class="" role="search" action="/release/search" method="get">
           <div class="ui transparent inverted icon input">
-            <i class="search icon"></i>
-            <input type="text" placeholder="Search..." name="q" aria-label="generic entity search">
+            <i class="search icon" style="padding-right: 2em;"></i>
+            <input type="text" placeholder="Search Papers..." name="q" aria-label="generic entity search" style="border: 1px solid #777 !important; padding: 5px !important; width: 15em;">
           </div>
         </form>
       </div>
