--- a/python/fatcat_web/templates/work_view.html
+++ b/python/fatcat_web/templates/work_view.html
@@ -1,4 +1,7 @@
+{% set entity = work %}
+{% import "entity_macros.html" as entity_macros %}
 {% extends "base.html" %}
+
 {% block fullbody %}
 
 <div class="ui stackable mobile reversed grid centered">
@@ -65,19 +68,10 @@ pre-print and a published article may contain small differences, but still
 reference the same underlying "work".
 
 </div>
+
 <div class="five wide column">
-<div class="ui segment top attached">
 
-<b>Fatcat Bits</b>
-<p>State is "{{ work.state }}". Revision:
-<br><small><code>{{ work.revision }}</code></small>
-<br><a href="https://api.{{ config.FATCAT_DOMAIN }}/v0/work/{{ work.ident }}">As JSON object via API</a>
-
-</div>
-<div class="two ui buttons bottom attached">
-  <a href="/work/{{ work.ident }}/edit" class="ui blue button">Edit Metadata</a>
-  <a href="/work/{{ work.ident }}/history" class="ui button">View History</a>
-</div>
+{{ entity_macros.fatcat_bits(entity, "work", "") }}
 
 </div>
 </div>
