"Search all Releases"

--- a/python/fatcat_web/templates/release_search.html
+++ b/python/fatcat_web/templates/release_search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1>Article Search</h1>
+<h1>Search all Releases</h1>
 <form class="" role="search" action="/release/search" method="get">
   <div class="ui form">
     <div class="ui action input huge fluid">
